Bug 445553 - OSD and applet: "Switch to laptop screen" action has nonsensical name when the device is not a laptop
Summary: OSD and applet: "Switch to laptop screen" action has nonsensical name when th...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Display Configuration widget and OSD (other bugs)
Version First Reported In: 5.22.5
Platform: Ubuntu Linux
: NOR minor
Target Milestone: 1.0
Assignee: Nate Graham
URL:
Keywords: multiscreen, usability
: 459966 493309 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-15 21:59 UTC by Sergio
Modified: 2025-06-13 17:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio 2021-11-15 21:59:39 UTC
Pressing Super+P brings up the OSD with several options, including "Switch to laptop screen". I'm using a standard desktop though, and I don't see much reason that the option shouldn't be called "Switch to main screen" or "Switch to primary screen" instead. My use case is to manage the connection to a TV.
Comment 1 Nate Graham 2022-11-07 20:52:40 UTC
*** Bug 459966 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2024-09-18 17:52:21 UTC
*** Bug 493309 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2025-05-08 21:31:20 UTC
Frankly the action's text doesn't make much sense even with a laptop. Switch *what* to laptop screen? Does this mean shut off the external screen and only use the laptop screen?

What if you have three or more screens?

It probably needs re-wording to be more generic, or else we'll have to conditionalize the text based on the actual screen arrangement.
Comment 4 Nate Graham 2025-05-14 21:53:43 UTC
The icons are wrong too, since they talk about laptops but depict two desktop-style screens.
Comment 5 Nate Graham 2025-05-22 13:04:15 UTC
I'll work on this.
Comment 6 Nate Graham 2025-06-10 19:59:44 UTC Comment hidden (spam)
Comment 8 Nate Graham 2025-06-13 17:27:43 UTC
Git commit 64db07d88a4d53fd980aab296bd868fa7b5a9d62 by Nate Graham.
Committed on 13/06/2025 at 17:14.
Pushed by ngraham into branch 'master'.

Genericize OSD action names

Don't explicitly mention laptops since we can't assume the device's
form factor. Instead call them "built-in screens", re-using terminology
we expose in the KCM.
FIXED-IN: 6.5.0

M  +5    -5    common/osdaction.cpp

https://invent.kde.org/plasma/kscreen/-/commit/64db07d88a4d53fd980aab296bd868fa7b5a9d62