Genericize OSD action names

Don't explicitly mention laptops or external screens since we can't
assume the device's form factor. Instead consistently refer to
screens as primary or secondary, re-using terminology we expose in the
KCM.

BUG: 445553
FIXED-IN: 6.5.0